Preserve only method reference.